--- a/style.css
+++ b/style.css
@@ -4,24 +4,115 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-} 
-
-header{
-    width: 100%;
-    height: 100vh;
-    background-image:url("./images/main-bcg.jpeg");
-    background-repeat: no-repeat;
-background-size: cover;
-background-attachment: fixed;
+    
 }
-header > .container{
-    height: 100%;
+body{
+    background-color: #222;
+}
+.container{
+
     width: 100%;
-    background-color: rgba(0, 0,0,0.56);
+    height: 50px;
+
+background-color: white;
+
+}
+header{  
+    width: 100%;
+    height: 50px;
+
+}
+header>nav{
+    display: flex;
+    width: 100%;
+    height: 50px;
+    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    background-color: white;
+
+}
+.logo{
+    width: 20%;
+    height: 100%;
+    display: flex;
+justify-content: center;
+align-items: center;
+}
+.logo>h1
+{
+    color: rgb(5, 5, 5);
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1rem;
+    letter-spacing: 5px;
+}
+    .logo>h1>span
+{
+    color: rgb(81, 199, 217);
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1rem;
+    letter-spacing: 5px;
+}
+.menu{
+    width: 50%;
+    height: 100%;
+    display: inline-block;
+justify-content: center;
+align-items: center;
+}
+.menu>ul{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+.menu>ul>li{
+width: 20%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.menu>ul>li a{
+    color: rgba(60, 59, 59, 0.742);
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+transition: all 0.3s ease-in-out;
+    }
+    .menu>ul>li a:hover{
+        color: skyblue;
+        }
+.nav-icons{
+    width: 30%;
+    height: 100%;
+    display: flex;
+justify-content: center;
+align-items: center;
+
+}
+.nav-icons>i{
+    color: rgb(81, 199, 217);
+    font-size: 1.5rem;
+    width: 8%;
+    transition: all 0.3s ease-in-out;
+}
+.nav-icons  :hover{
+    color: rgb(17, 42, 53);
+}
+
+
+main{
+    height: calc(100vh - 50px);
+    width: 100%;
+}
+main>.para-container{    height: 100%;
+    width: 100%;
+    background: linear-gradient(to bottom, #51c7d9, rgb(74, 74, 74));
     display: flex;
     justify-content: center;
     align-items: center;
 }
+    
 .header-para{
     width: 70%;
     text-align: center;
@@ -30,444 +121,405 @@ header > .container{
     font-size: 30px;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    flex-direction: column;
+    justify-content: center;
+
 
 }
-.header-para>h3{
-    font-family: cursive;
-    color: rgb(43, 103, 43);
+.header-para>h2 {
+font-size: 70px;
 }
-.header-para>button{
-    padding: 10px 50px;
-    background:#386621;
-    font-family: cursive;
-color: aliceblue;
-border: 2px solid #386621;
-font-size: 20px;
-transition: all 500ms linear;
-}
-.header-para>button:hover{
-background-color :white;
-color: #386621;
-}
- .open-menu-radio,#close-menu{
-    display: none;
- }
- label[for=open-menu]{
-    font-size: 3rem;
-    color: rgba(64, 135, 13, 0.878);
-    display: block;
-    position: fixed;
-    top: 40px;
-    left: 40px;
-    animation-name:heartbeat;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
- }
- .open-menu-radio:checked~aside{
-    left: 0;
- }
- aside{
-    width: 20vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: -30%; 
-    background-color: rgb(215, 214, 214);
-    transition: all 300ms ease-in;
- }
- .nav-container{
-    width: 100%;
-    height: 100%;
-
- }
- .nav-container > label{
-    color: rgba(255, 0, 0, 0.459);
-    font-size: 2rem;
-    display: flex;
-    justify-content: end;
-    padding-right: 10px;
-    transition: all 300ms ease-in;
- }
- .nav-container > label :hover{
-    color: rgba(255, 0, 0, 0.122);
- }
- .nav-container> nav{
-    height: 100%;
-    width: 100%;
- }
- .nav-container>nav>ul{
-    width: 100%;
-    height: 100%;
- }
- .nav-container>nav>ul> li {
-    width: 100%;
-    height: 7%;
-    padding-left: 20px;
-    transition: all 300ms ease-in;
- }
-
- .nav-container>nav>ul> li > a{
-    height: 100%;
-    width: 100%;
-    color: rgb(90, 90, 193);
-    font-size: 1.5rem;
-    font-weight: 200;
- }
- .nav-container>nav>ul> li:hover{
-background-color: rgba(0, 128, 0, 0.416);
-padding:0px  30px;
-display: block;
- }
- main{
-    width: 100%;
-  height: 400px;;
- }
- main>.gap{
-    width: 100%;
-    height: 10px;
-    background-color: rgb(55, 117, 66);
- }
-main>.category-menu{
-    width: 100%;
-    height: 200px;
-    background-color: blanchedalmond;
-}
-.category-menu>ul{
-    width: 100%;
-    height: 100%;
-    display: flex;
-}
-.category-menu>ul>li{
-width: 25%;
-height: 100%;
-display: flex;
-flex-direction: column;
-align-items: center;
-padding-top: 20px;
-font-family: monospace;
-transition: all 300ms ease-in;
-}
-
-.category-menu>ul>li:hover{
-background-color: #faf4f4;
-
- }
- .category-menu>ul>li:hover>i{
-    position: relative;
-    bottom: 10px;
-    display: flex;
-     }
-
-.category-menu>ul>li>p{
-font-size: 13px;
-color: #555;
-text-align: center;
-width: 10rem;
-font-family: cursive;}
-.category-menu>ul>li>i{
-color: olive;
-font-size: 30px; 
-transition: all 400ms linear;
-  }
-main>.tea{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    padding-left: 60px;
-    padding-top: 40px;
-    gap: 5rem;
-}
-.tea-img{
-    width: 30%;
-    height: 250px;
-    background-color: #386621;
-    overflow: hidden;
- border: 5px solid #386621;
-
-    
-}
-.description{
-    width: 30%;
-    height: 50%;
-    padding-left: 40px;
-    padding-top: 50px;
-}
-.description>h3{
-    width: 100%;
-    height: 20%;
-    font-size: 30px;
-    margin-bottom: 20px;
-    font-family: cursive;
-    color: olive;
-    display: block;
-}
-.description>h2{
-    font-size: 40px;
-    font-family: cursive;
-    display: block;
-}
-.tea-img>img {
-    width: 100%;
-    height: 270px;
-    display: block;
-    transition: all 300ms linear;  
-}
-.tea-img>img:hover{
-    transform: scale(1.2);
-}
-main>section {
-    background-color: antiquewhite;
-}
-
-.product-section {
-    display: flex;
-    padding: 20px;
-}
-
-.text-container {
-    padding-right: 20px;
-}
-
-.main-title {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    color: #333;
-}
-
-.accent-color {
-    color: #558b2f;
-    font-weight: bold;
-}
-
-.inventory-button {
-    background-color: #558b2f;
-    color: white;
-    padding: 0.8rem 2rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.inventory-button:hover {
-    background-color: #5ca339ae;
-}
-
-.product-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
-}
-
-.product-item {
-
-    padding: 1rem;
+.header-para>p{
+    font-size: 1.2rem;
+    width: 50%;
+    margin: auto;
     text-align: center;
 }
-
-.product-item >img {
-    height: 200px;
-    border-radius: 20px;
-
+.header-para>button{
+    font-size: 18px;
+    padding: 10px 20px 10px 20px;
+    margin-top: 20px;
+    border: 5px solid rgb(216, 212, 212);
+    background-color: rgb(216, 212, 212);
+    transition: all linear 0.3s;
 }
-.text-container>p {
-    width: 60%;
-    font-size: 20px;
-    color: #605e5ebe;
-    padding-bottom: 20px;
+.header-para>button:hover{
+ background-color: #af131300;
+   
 }
-
-.price {
-    color: #558b2f;
+.about-us{
+width: 100%;
+height: 100px;
+display: flex;
+justify-content: center;
+align-items: center;
+font-family: Arial, Helvetica, sans-serif;
+background-color: white;
 }
-.card-container{
+.about-us >h1 >span{
+    color: rgb(80, 150, 161);
+}
+.about-us-container{
     width: 100%;
-    height: 80vh;
+    height: 500px;
+    background-color: white;
     display: flex;
+}
+.about-us-img{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    gap: 3rem;
-    padding: 6rem;
-    position: relative;
+    margin-top: -20px;
 }
-
-.card{
-    width: 25%;
-    height: 430px;
-    background-color: #a9a6a64d;
-    border-radius: 20px;
-    transition: all 300ms ease-in;
+.about-us-para-container{
+    width: 40%;
+    height: 400px;
+    flex-direction: column;
+    justify-content: center;
+    display: flex;
+    font-size: 20px;
+    margin-top: 30px;
 }
-.card:hover{
-    transform: scale(1.05);
-}
-.card>i{
-position: absolute;
+.about-us-para-container>h3{
     font-size: 30px;
-    bottom: 38%;
-    margin-left: 145px;
-    justify-content: center;
-    background-color: #7dad5a;
-    padding: 6px;
-    border: #E5E4E4 solid 4px;
-    border-radius: 100%;
-    color: #356116;
-
-
+    letter-spacing: 2px;
+    text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(0, 0, 0, 0.847);
 }
-.card>img{ 
+.about-us-para-container>.line-1{
+    margin-bottom: 10px;
+    margin-right: 20px;
+    font-size: 17px;
+}
+.about-us-para-container>.line-2{
+    margin-bottom: 10px;
+    margin-right: 20px;
+    font-size: 17px;
+}
+    .about-us-para-container>button{
+        font-size: 18px;
+        padding: 10px 30px 10px 30px;
+        width: 30%;
+        margin-top: 20px;
+        color: white;
+        background-color: rgb(71, 153, 166);
+        border: none;
+        letter-spacing: 1px;
+        transition: all linear 0.3s;
+    
+
+    }
+        .about-us-para-container>button:hover{
+            background-color: #364964e7;
+        }
+    .about-us-img>div{
+        width: 80%;
+    position: relative;
+    }
+    .about-us-img>div>img{
+        width: 90%;
+        display: block;
+        height: 350px;
+        position: relative;
+        z-index: 1;
+    }
+    .border-img{
+        width: 90%;
+        height: 100%;
+        position: absolute;
+        border: 5px solid rgb(66, 184, 180);
+        top: -20px;
+        left: -20px;
+    }
+    .our-services{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        font-size: 25px;
+        background-color: #eeededf6;
+        font-family: Arial;
+        padding-top: 60px;
+    }
+    .our-services>h1>span{
+        color: rgb(80, 150, 161);
+    }
+    main>.category-menu{
+        width: 100%;
+        height: 200px;
+        background-color: #eeededf6;
+    }
+    .category-menu>ul{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .category-menu>ul>li{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    }
+.category-menu>div{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+}
+
+    .category-menu>ul>li>p{
+        font-size: 13px;
+        color: #555;
+        width: 80%;
+        font-family: cursive;
+    }
+
+        .category-menu>ul>li>h3{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+
+        }
+        
+        .category-menu>ul>li>i{
+        color: rgb(53, 98, 212);
+        font-size: 30px;
+        padding: 10px;
+        background-color: rgb(91, 159, 160);
+        margin: 10px;
+          }
+          .featured-tours-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 2rem;
+            padding: 2rem;
+            background-color: white;
+          }
+          
+          .featured-tour-item:hover {
+            transform: scale(1.1);
+          }
+          
+          .featured-tour-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #fff;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            overflow: hidden;
+            width: 300px;
+            transition: all 0.3s ease-in-out;
+            margin: 30px;
+          }
+          
+          .featured-tour-image {
+            width: 100%;
+            height: 200px;
+            background-color: #f1f1f1;
+            
+          }
+          .featured-tour-image>img{
+            width: 100%;
+            height: 100%;
+          }
+          
+          .featured-tour-details {
+            padding: 1.5rem;
+            text-align: center;
+          }
+          
+          .featured-tour-name {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 0.5rem;
+          }
+          
+          .featured-tour-duration,
+          .featured-tour-location,
+          .featured-tour-price {
+            font-size: 0.9rem;
+            color: #666;
+            margin-bottom: 0.5rem;
+          }
+          
+          .featured-tour-description {
+            font-size: 0.9rem;
+            color: #666;
+            margin-bottom: 1rem;
+          }
+          .featured-tours{
+            width: 100%;
+            height: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: white;
+                font-size: 30px;
+          }
+.all-tours{
     width: 100%;
-    border-radius: 20px 20px 0 0;
-}
-.contact-us {
-    background-color: #f4f4f4;
-    padding: 40px 20px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+    
 }
-.telephone{
-    padding-top: 20px;
+.all-tours>button{
+    font-size: 18px;
+    padding: 10px 20px 10px 20px;
+    border: 5px solid #d8d4d4;
+    background-color: #d8d4d4;
+    margin-bottom: 20px;
 }
-
+    .blue-section {
+        width: 100%;
+        display: flex;
+        height: 200px;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(81, 199, 217);
+    }
 .contact-info {
     flex: 1;
     padding-right: 40px;
-    font-size: 20px;
+    font-size: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
+    padding-left: 200px;
 }
 
 .contact-info >h3 {
-    color: #5cb85c;
     margin-bottom: 5px;
+    width: 100%;
+    color: white;
 }
 
 .contact-info >p {
     margin-bottom: 20px;
+    font-size: 10px;
+    color: navy;
 }
 
-.contact-info > a{
-    color: #1c1a1a;
-    text-decoration: none;
-}
 
 .contact-form {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow:  10px 10px 10px rgba(6, 6, 6, 0.201);
-    margin-right: 50px;
-    padding: 20px;
-    width: 35%;
+width: 40%;
+margin-right: 40px;
+
 }
 
-.contact-form >h2 {
-    width: 100%;
-    font-family: cursive;
-    color: #333333a5;
-    margin-bottom: 15px;
-    justify-content: center;
-    text-align: center;
-    font-size: 30px;
-    font-weight: bold;
-    padding: 20px;
-}
-
-.contact-form>form> input[type="text"]{
-    width: 95%;
+.contact-form> input[type="email"]{
+    width: 80%;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    
+
     box-sizing: border-box;
     margin-bottom: 15px;
     margin-left: 15px;
 }
-
-.contact-form >form>input[type="email"]{
-    width: 95%;
+.contact-form> button{
+    display: inline-block;
+    width: 15%;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 15px;
-    margin-left: 15px;
-}
-
-.contact-form >form>input[type="message"] {
-    width: 95%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 15px;
-    margin-left: 15px;
-    padding-bottom: 60px;
-}
-
-.contact-form > form>button {
-    background-color: #5cb85c;
-    display: block;
-    width: 100%;
-    color: #fff;
-    padding: 10px 20px;
     border: none;
-    border-radius: 0 0 4px 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+   color: rgba(60, 133, 125, 0.825);
+    font-family: cursive;
+
+}
+.grid-container {
+    width: 100vw;
+    height: 70vh;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .grid-item {
+ width: 100%;
+ height: 100%;
+ overflow: hidden;
+ position: relative;
+ aspect-ratio: 1;
+  }
+  .grid-items>img{
+    width: 100%;
+height: 100%;
+    object-position: center;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+
+
+footer {
+    margin: 40px;
+    text-align: center;
+    padding: 20px 0;
+    background-color: #222;
+    color: #fff;
 }
 
-.contact-form button:hover {
-    background-color: #4cae4c;
+footer nav a {
+    margin: 0 10px;
+    text-decoration: none;
+    color: inherit;
+    font-size: 20px;
+    transition: all 0.3s ease-in-out;
+    
 }
 
-    .contact-info {
-        padding-right: 0;
-        margin-bottom: 30px;
-    }
-    .end-container{
-        background-color: #1a1a1a;
-        color: #f4f4f4;
-        padding: 20px 0;
-        font-size: 14px;
-        
-    }
-    
-    .footer-info {
-        flex: 1;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 10px;
-        word-spacing: 10px;
 
+footer nav a:hover {
+    color: rgb(63, 125, 125);
+    
+}
 
-    }
-    .footer-info>p>span{
-        color: #5cb85c;
-    }
-    .social-links {
-        display: flex;
-        justify-content: center;
-    }
+footer .social-media a {
+    margin:  10px;
+    text-decoration: none;
+    color: inherit;
+    transition: all 0.3s ease-in-out;
+}
+.social-media a:hover {
+    color: rgb(63, 125, 125);
     
-    .social-icon {
-        color: #f4f4f4;
-        font-size: 18px;
-        margin: 0 10px;
-        transition: color 0.3s ease;
-    }
-    
-    .social-icon:hover {
-        color: #5cb85c;
-    }
- @keyframes heartbeat {
-    0%{
-     transform: scale(1);
-    }
-    50%{
-    transform: scale(2);
-    }
-    100%{
-   transform: scale(1);
-    }
- }
+}
+
+footer .social-media i {
+    font-size: 2rem;
+}
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    background-color: rgba(103, 187, 208, 0.471);
+}
+.grid-item:hover .overlay{
+        opacity: 1;}
